src/pixelperfect.css.scss
$selected: #7c6996;

#pixelperfect {
  width: 200px;
  padding: 10px;
  position: fixed;
  right: 20px;
  top: 20px;
  cursor: default;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.6);
  -o-box-shadow: 0 0 16px rgba(0, 0, 0, 0.6);
  -ms-box-shadow: 0 0 16px rgba(0, 0, 0, 0.6);
  box-shadow: 0 0 16px rgba(0, 0, 0, 0.6);
  z-index: 2147483646;
  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAASwCAYAAAA6zCBKAAAAR0lEQVRYR+3LsQ0AMQhDUYv12L++liUwVxApQ+Q3TzI2kZlfzIyW7lZIUtievdk+0fbZ3ULSRFX1vgEAAAAAAAAAAAAAPMgPiMMynVsII3gAAAAASUVORK5CYII=) left top repeat-x;
  border: #d0d0d0 solid 2px;

  &:before {
    position: absolute;
    top: -1px;
    left: -1px;
    right: -1px;
    bottom: -1px;
    content: " ";
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    border: #b0b0b0 solid 1px;
    z-index: -1;
  }

  * {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    text-decoration: none;
    color: #fff;
    margin: 0;
    padding: 0;
  }

  label {
    display: inline;
    color: #cdcdcd;
  }

  input {
    width: auto;
    height: auto;
    background: none;
    border: none;
    display: inline-block;
  }

  input[type="radio"] {
    margin: 3px 3px 0 5px;
  }

  #pixelperfect-content > div {
    overflow: hidden;
    height: 20px;
    line-height: 20px;
    padding: 5px 0;
  }

  .pixelperfect-label {
    width: 55px;
    padding-right: 5px;
    text-align: right;
    display: block;
    float: left;
    font-weight: bold;
    color: #cdcdcd;
  }

  input[type="text"] {
    width: 35px;
    height: 14px;
    padding: 2px;
    border: 1px solid #c0c0c0;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -o-border-radius: 3px;
    -ms-border-radius: 3px;
    border-radius: 3px;
    background: #fff;
    color: #333;
    padding: 2px;
  }

  .pixelperfect-button {
    width: 16px;
    height: 16px;
    display: block;
    float: right;
    margin-left: 8px;
    color: #ffffff;
    text-align: center;
    line-height: 16px;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    border-radius: 8px;
    font-size: 12px;
    cursor: pointer;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAUCAIAAADDbMD2AAAALUlEQVQIHQXBAQ2AABADseQkogPfmPgutH3v07bcNevIrlkIIYTQ6Gi0kwnhB+X4Oimw8kzqAAAAAElFTkSuQmCC) center repeat-x;
    -moz-box-shadow: -1px -1px 3px rgba(0, 0, 0, 0.6);
    -webkit-box-shadow: -1px -1px 3px rgba(0, 0, 0, 0.6);
    box-shadow: -1px -1px 3px rgba(0, 0, 0, 0.6);

    &.pixelperfect-button-active {
      background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAAUCAIAAADDbMD2AAAALUlEQVQIHQXBAQ2AABADseT8oQTFePkutL3f07ZGRyaEZiEuEwttF+tcs5AJP+ATOhm3X/9mAAAAAElFTkSuQmCC) center repeat-x;
    }

    &:hover {
      opacity: 0.8;
    }
  }

  .pixelperfect-range {
    background: #b6b6b6 url(data:image/gif;base64,R0lGODdhAQAUAIQUAKKioqWlpaenp6qqqqysrK+vr7GxsbS0tLa2trm5ubu7u76+vsDAwMPDw8XFxcjIyMrKys3Nzc/Pz9LS0v///////////////////////////////////////////////ywAAAAAAQAUAAAFEeAkRdDjNMyiJMhhFMQgBEAIADs=) repeat-x center center;
  }


  #pixelperfect-top {
    margin: -10px -10px 0;
    padding: 10px;
    border-bottom: 1px solid #dadada;
    line-height: 20px;
    cursor: move;
  }

  #pixelperfect-lang-y {
    margin-left: 10px;
  }

  #pixelperfect-minimized {
    line-height: 12px;
  }

  #pixelperfect-horizontal-left {
    margin-left: 0;
  }

  #pixelperfect-opacity-range {
    width: 90px;
    height: 20px;
    vertical-align: middle;
    margin-left: 5px;

    &.pixelperfect-range {
      height: 0px;
      position: relative;
      margin: 7px inherit;
      display: inline-block;
      border-top: #000 solid 1px;
      border-bottom: #fff solid 1px;
      -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.33);
      -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.33);
      box-shadow: 0 0 1px rgba(0, 0, 0, 0.33);
    }

    &.pixelperfect-range .pixelperfect-slider {
      display: block;
      width: 14px;
      height: 14px;
      -moz-border-radus: 7px;
      -webkit-border-radius: 7px;
      -o-border-radius: 7px;
      -ms-border-radius: 7px;
      border-radius: 7px;
      background: #ccc;
      position: absolute;
      top: -7px;
      left: 50%;
      margin-left: -7px;
      cursor: move;
    }
  }

  #pixelperfect-content {

    #pixelperfect-addlayer {
      border-top: 1px solid #dadada;
      border-bottom: 1px solid #dadada;
      margin: 0 -10px;
      padding: 5px 10px;

      #pixelperfect-file {
        width: 110px;
      }

      #pixelperfect-fileinput {
        display: none;
      }

    }

    #pixelperfect-layers {
      height: auto;
      overflow: auto;

      .pixelperfect-layer {
        max-height: 120px;
        padding: 5px 30px 5px 5px;
        -moz-border-radius: 10px;
        -webkit-border-radius: 10px;
        -o-border-radius: 10px;
        -ms-border-radius: 10px;
        border-radius: 10px;
        overflow: auto;
        position: relative;
        text-align: center;
        margin-bottom: 5px;
      }

      .pixelperfect-layer,
      .pixelperfect-layer img {
        max-width: 165px;
        max-height: 120px;
        vertical-align: top;
      }

      .pixelperfect-layer-selected {
        background: $selected;
      }

      .pixelperfect-button {
        position: absolute;
        top: 5px;
        right: 5px;
      }

    }

    #pixelperfect-drop-file {
      width: 194px;
      height: 124px;
      border: 3px dashed #fff;
      line-height: 114px;
      text-align: center;
      color: #999;
      -moz-border-radius: 10px;
      -webkit-border-radius: 10px;
      -o-border-radius: 10px;
      -ms-border-radius: 10px;
      border-radius: 10px;
    }

    #pixelperfect-drop-file.pixelperfect-dragover {
      background: $selected;
    }

    #pixelperfect-drop-file span {
      font-size: 18px;
    }

  }
}

#pixelperfect-overlay {
  position: absolute;
  cursor: move;
}

#pixelperfect-help-popup {
  background: rgba(0, 0, 0, 0.7);
  position: fixed;
  width: 740px;
  height: 400px;
  top: 50%;
  left: 50%;
  margin: -200px 0 0 -390px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
  border-radius: 20px;
  z-index: 2147483644;
  padding: 20px 20px 10px;
  font-size: 12px;
  opacity: 0;

  > * {
    color: #fff;
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    padding: 0;
  }

  h1 {
    font-size: 20px;
    margin: 0 0 10px;
  }

  h2 {
    font-size: 16px;
    border-bottom: solid 1px #ccc;
    margin: 0 0 5px;
  }

  .pixelperfect-shortcuts {
    width: 360px;
    margin: 0;
    float: left;

    dl {
      overflow: hidden;

      dt {
        float: left;
        clear: left;
        width: 90px;
        font-weight: bold;
        font-size: 14px;
        line-height: 18px;
      }

      dd {
        float: left;
        margin: 0;
        padding: 0;
        line-height: 18px;
      }
    }

    &+ .pixelperfect-shortcuts {
      margin-left: 20px;
    }

  }

}

